<resources>
    <string name="app_name">OTmovies Zup</string>
    <string name="app_name_caps">OTMOVIES</string>
    <string name="textView_EmailHeadHint">INFORME SUA CONTA DE\n E-MAIL</string>
    <string name="textButton_next">AVANÇAR</string>
    <string name="emailHint">E-mail (exemplo@mail.com)</string>
    <string name="textHeaderRegister">CRIE SUA NOVA \nCONTA</string>
    <string name="userEmailEntered">useremail@empresa.com</string>
    <string name="password">Senha</string>
    <string name="user_name">Nome de usuário</string>
    <string name="full_name">Nome Completo</string>
    <string name="RegexForNameUnicode">^[\\p{L} .\'-]+$</string>
    <string name="error_email_pre_login">E-mail inválido (exemplo@mail.com)</string>
    <string name="error_register_name">Obrigatório apenas letras e no máximo 50 caracteres.</string>
    <string name="error_user_name">Obrigatório conter letras e/ou números, no máximo 15 caracteres.</string>
    <string name="error_password">Obrigatório conter letras e números, entre 6 e 10 caracteres.</string>
    <string name="EmailPreLogin">EmailPreLogin</string>
    <string name="RegexOnlyNumberOrLetter">[a-zA-Z0-9]+</string>
    <string name="RegexOnlyNumberAndLetter">(?:\\d+[a-z]|[a-z]+\\d)[a-z\\d]*</string>
    <string name="confirmInformation">CONFIRME AS INFORMAÇÕES\nDE SUA CONTA</string>
    <string name="avancar">avançar</string>
    <string name="imageview_backarrow">imageView_backArrow</string>
    <string name="headerFirst_informTokenAndNewPassword">IDENTIFICAMOS QUE VOCÊ JÁ\nINICIOU UM CADASTRO, PARA\nCONCLUIRMOS, INFORME O\nCÓDIGO ENVIADO PARA O SEU\nE-MAIL:</string>
    <string name="noReceiveCode">Não recebeu o código?</string>
    <string name="SendAgain">Enviar novamente</string>
    <string name="validate">validar</string>
    <string name="token_sended">PARA SUA SEGURANÇA\nINFORME O CÓDIGO ENVIADO\nPARA O SEU\nE-MAIL:</string>
    <string name="create_new_password">CRIE SUA NOVA  SENHA:</string>
    <string name="change_password">alterar senha</string>
    <string name="code">Código</string>
    <string name="errorCode">Código inválido</string>
    <string name="passwordConfirm">Confirme sua senha</string>
    <string name="noMatchPassword">As senhas não batem</string>
    <string name="newPassword">Nova senha</string>
    <string name="enterPassword">INFORME SUA SENHA</string>
    <string name="forgotPassword">Esqueceu sua senha?</string>
    <string name="forgotUsername">Esqueceu seu usuário?</string>
    <string name="enter">entrar</string>
    <string name="errorUserOrPassword">Usuário ou senha inválido!</string>
    <string name="tokenValidation">Token de validação</string>
    <string name="registerOk">Usuário cadastrado com sucesso!</string>
    <string name="error_nullfield">Não são permitidos campos nulos ou vazios</string>
    <string name="duplicate_email">Email já cadastrado</string>
    <string name="duplicate_username">Nome de usuário já cadastrado</string>
    <string name="emailregister">emailregister</string>
    <string name="errorValidadePassword">Obrigatório conter letras e números, entre 6 e 10 caracteres.</string>
    <string name="progressBar_fullPercentage">100</string>
    <string name="secureKeyResquestService">593c3280aedd01364c73000d3ac06d76</string>
    <string name="connectionErrorMessage">Ocorreu um erro na conexão</string>
    <string name="NoValidateUserMessage">Falha ao validar usuário</string>
    <string name="success_message_login">Senha confirmada, login autorizado!</string>
    <string name="success_message_change_pass">Senha alterada com sucesso!</string>
    <string name="service_or_connection_error_change_password">Falha ao validar alterar a senha. Verifique a conexão e tente novamente.</string>
    <string name="service_or_connection_error_login">Falha ao validar sua senha. Verifique a conexão e tente novamente.</string>
    <string name="success_message_email">Foi enviado um código para seu e-mail!</string>
    <string name="service_or_connection_error_token">Falha ao enviar código para o e-mail. Verifique a conexão e tente novamente.</string>
    <string name="registered">REGISTERED</string>
    <string name="pending">PENDING</string>
    <string name="inexistent">INEXISTENT</string>
    <string name="invalid_email_key">error.invalid.email</string>
    <string name="service_or_connection_validate_email">Falha ao validar seu email. Verifique a conexão e tente novamente.</string>
    <string name="service_or_connection_error_register">Falha ao registrar seu cadastro. Verifique a conexão e tente novamente.</string>
    <string name="service_or_connection_error_resend_token">Falha ao reenviar o código. Verifique a conexão e tente novamente.</string>
    <string name="success_resend_token">Código reenviado com sucesso!</string>
    <string name="service_or_connection_error_validate_token">Falha ao validar o código. Verifique a conexão e tente novamente.</string>
    <string name="unauthorized_token_key">error.unauthorized.token</string>
    <string name="invalid_token_key">error.invalid.token</string>
    <string name="success_message_validate_token">Código confirmado com sucesso!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_search">Search</string>
    <string name="title_activity_home_drawer">HomeDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="text_fragment_a">Esta é a fragment A da Tab A!</string>
    <string name="text_fragment_b">Esta é a fragment B da Tab B!</string>
    <string name="first_page">1</string>
    <string name="title_activity_list_film">ListFilmActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorites">Favoritos</string>
    <string name="hintSearch">Pesquisar filmes</string>
    <string name="errorMessageFilmNotFound">Nenhum filme foi encontrado\npara sua pesquisa</string>
    <string name="movieTitleItem">Movie Title</string>
    <string name="textToolsKeywordsItem">Drama, Documentário</string>
    <string name="point">•</string>
    <string name="textRuntimeItem">2h 15min</string>
    <string name="textYearItem">2017</string>
    <string name="textDescriptionItem">Nowadays, user engagement is considered one of the most important metrics for the success of your app. owadays, user engagement is considered one of the most important metrics for the success of your app</string>
    <string name="textPriceItem">R$ 16,90</string>
    <string name="textFilmNote">6.9</string>
    <string name="moviePosterDescription">movie poster</string>
    <string name="countries">USA, UK</string>
    <string name="imdb">IMDB</string>
    <string name="totalNoteFilm">/10</string>
    <string name="diretor">"Diretor: "</string>
    <string name="directorsNames">James Cameron</string>
    <string name="writer">"Escritor: "</string>
    <string name="writersNames">James Cameron</string>
    <string name="similarOptions">Opções Semelhantes:</string>
    <string name="movieBannerDescription">movie banner</string>
    <string name="place_holder_banner_description">place holder banner</string>
    <string name="banner_navigation_view">banner navigation view</string>
    <string name="user_photo_border">borda foto usuário</string>
    <string name="logout">Logout</string>
    <string name="icon_logout">ícone saída</string>
    <string name="favoriteListEmpty">Sua lista de filmes favoritos está vazia.\n\nDeslize para baixo para atualizar a lista!</string>
    <string name="iconSwipeDescription">ícone swipe down</string>
</resources>
