<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/Layout_Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground">

        <ImageView
            android:id="@+id/imageView_backArrow"
            android:layout_width="@dimen/sizeBackArrow"
            android:layout_height="@dimen/sizeBackArrow"
            android:layout_marginTop="@dimen/margin_top_arrow"
            android:layout_marginStart="@dimen/marginLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back_black_24dp"
            android:contentDescription="@string/imageview_backarrow"/>

        <TextView
            android:id="@+id/textView_headerRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_header"
            android:fontFamily="@font/dosis_bold"
            android:letterSpacing="@dimen/defaultHeaderLetterSpacing"
            android:text="@string/textHeaderRegister"
            android:textAlignment="center"
            android:textColor="@color/colorEmailHeadHint"
            android:textSize="@dimen/textSizeHeader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_emailEntered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStandard"
            android:layout_marginTop="@dimen/marginStandard"
            android:layout_marginEnd="@dimen/marginStandard"
            android:fontFamily="@font/robotoregular"
            android:text="@string/userEmailEntered"
            android:textAlignment="center"
            android:textColor="@color/colorEmailHeadHint"
            android:textSize="@dimen/textSizeDefault"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_headerRegister" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginThirty"
            android:layout_marginBottom="@dimen/marginThirty"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/button_nextRegister"
            app:layout_constraintTop_toBottomOf="@+id/textView_emailEntered">

            <br.com.estagio.oletrainning.zup.otmovies.components.ErrorEditText
                android:id="@+id/errorEditText_enterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marginLayout"
                android:layout_marginRight="@dimen/marginLayout"
                app:setHint="@string/full_name"
                app:setInicialErrorVisibility="false"
                app:setInputType="textPersonName"
                app:setMessageError="@string/error_register_name">

            </br.com.estagio.oletrainning.zup.otmovies.components.ErrorEditText>


            <br.com.estagio.oletrainning.zup.otmovies.components.ErrorEditText
                android:id="@+id/errorEditText_enterUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marginLayout"
                android:layout_marginTop="@dimen/marginDefault"
                android:layout_marginRight="@dimen/marginLayout"
                app:setHint="@string/user_name"
                app:setInicialErrorVisibility="false"
                app:setInputType="text"
                app:setMessageError="@string/error_user_name">

            </br.com.estagio.oletrainning.zup.otmovies.components.ErrorEditText>

            <br.com.estagio.oletrainning.zup.otmovies.components.ErrorEditText
                android:id="@+id/errorEditText_enterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marginLayout"
                android:layout_marginTop="@dimen/smallMargin"
                android:layout_marginRight="@dimen/marginLayout"
                app:setHint="@string/password"
                app:setInicialErrorVisibility="false"
                app:setInputType="textPassword"
                app:setMessageError="@string/error_password">

            </br.com.estagio.oletrainning.zup.otmovies.components.ErrorEditText>
        </LinearLayout>


        <Button
            android:id="@+id/button_nextRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:fontFamily="@font/dosis_bold"
            android:text="@string/textButton_next"
            android:textColor="@color/colorTextBottonEmailPreLogin"
            android:textSize="@dimen/textSizeDefault"
            android:layout_marginBottom="@dimen/marginOrPaddingDefaultLayout"
            android:layout_marginLeft="@dimen/marginOrPaddingDefaultLayout"
            android:layout_marginRight="@dimen/marginOrPaddingDefaultLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:visibility="invisible"/>

        <include
            layout="@layout/loading_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>